fixed spacing issues

--- a/frontend/src/app/patients/patient/update-patient-modal/update-patient-modal.component.css
+++ b/frontend/src/app/patients/patient/update-patient-modal/update-patient-modal.component.css
@@ -1,12 +1,12 @@
 .form-group {
-    width: 100%;
-  }
-  
-  .mat-dialog-content {
-    display: flex;
-  }
-  
-  .form-control {
-    width: 100%;
-  }
-  
+  width: 100%;
+  padding: 0.5rem 0rem;
+}
+
+.mat-dialog-content {
+  display: flex;
+}
+
+.form-control {
+  width: 100%;
+}
